<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="favourite_fragment">Favourite Fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="about_app_fragment">About app fragment</string>
    <string name="check_internet">check internet</string>
    <string name="name_of_the_book">name of the book</string>
    <string name="name_of_the_author" />
    <string name="name_of_the_authors">name of the author</string>
    <string name="rs_299">Rs 299</string>
    <string name="_4_5">4.5</string>
    <string name="about_the_book">about the book</string>
</resources>
